--- a/Seiten/Vorlage.html
+++ b/Seiten/Vorlage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-    <title>Beruf</title>
+    <title>HOMEPAGE</title>
     <link href="../stats.css" rel="stylesheet">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
@@ -19,7 +19,6 @@
         <a class="navbar-brand" href="stats.html">
           <img
             src="../images/1.png"
-            alt="Logo"
             width="30"
             height="30"
             class="d-inline-block align-text-top"
@@ -61,17 +60,15 @@
             placeholder="Search"
             aria-label="Search"
           >
-         
         </form>
       </div>
     </nav>
       <nav class="navbar bg-light fixed-bottom d-md-none justify-content-center">
           <nav class="nav nav-pills nav-fill">
-            <a href="gaming.html" class="btn btn-light ms-3">Gaming</a>
-            <a href="Freizeit.html" class="btn btn-light ms-3">Freizeit</a>
+            <a href="gaming.html" class="btn btn-light ms-3">Shop</a>
+            <a href="Freizeit.html" class="btn btn-light ms-3">Checkout</a>
             <a href="Arbeit.html" class="btn btn-light ms-3">Arbeit</a>
           </nav>
-        
       </nav>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
