--- a/Seiten/Html/Vorlage.html
+++ b/Seiten/Html/Vorlage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge" >
     <title>HOMEPAGE</title>
-    <link href="../stats.css" rel="stylesheet">
+    <link href="../01_css/stats.css" rel="stylesheet">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,8 +18,8 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="stats.html">
           <img
-            src="../images/1.png"
-            width="30"
+            src="../../img/logo_Small.png"
+            width="80"
             height="30"
             class="d-inline-block align-text-top"
           >
