--- a/Seiten/Html/Vorlage.html
+++ b/Seiten/Html/Vorlage.html
@@ -18,19 +18,19 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="stats.html">
           <img
-            src="../../img/logo_Small.png"
-            width="80"
-            height="30"
+            src="../../img/TOPLOGOUnsichtbar.png"
+            width="280"
+            height="100"
             class="d-inline-block align-text-top"
+            
           >
-          livelifestats
         </a>
         <nav class="nav nav-pills nav-fill d-none d-md-block">
           <a href="gaming.html" class="btn btn-light ms-3 ">Gaming
             <img
             src="../images/d8fb4773e4705431ff3a0d2f9936e93f.png"
             alt="Gaming"
-            width="26"
+            width="326"
             height="26"
             class="d-inline-block align-text-top"
           ></a>
