--- a/Seiten/Html/Shop.html
+++ b/Seiten/Html/Shop.html
@@ -2,54 +2,63 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" >
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>HOMEPAGE</title>
-    <link href="../01_css/stats.css" rel="stylesheet">
+    <link href="../01_css/stats.css" rel="stylesheet" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
-    >
+    />
   </head>
   <body>
     <nav class="navbar bg-light">
       <div class="container-fluid">
+        <div class="d-flex flex-row">
         <a class="navbar-brand" href="Homepage.html">
-          <img
-            src="../../img/TopLogo.png"
-            width="130"
-            height="100"
-            class="d-inline-block align-text-top"
-          >
+          <div class="p-2">
+            <img
+              src="../../img/TopLogo.png"
+              width="110"
+              height="100"
+              class="d-inline-block align-text-top"
+            />
+          </div>
+          <div class="TextTitel" class="p-2">RAZUPALTUFF</div>
+        </div>
+
         </a>
         <nav class="nav nav-pills nav-fill d-none d-md-block">
-          <a href="gaming.html" class="btn btn-light ms-3 ">Gaming
+          <a href="gaming.html" class="btn btn-light ms-3"
+            >Gaming
             <img
-            src="../images/d8fb4773e4705431ff3a0d2f9936e93f.png"
-            alt="Gaming"
-            width="26"
-            height="26"
-            class="d-inline-block align-text-top"
-          ></a>
-          <a href="Freizeit.html" class="btn btn-light ms-3">Freizeit
+              src="../images/d8fb4773e4705431ff3a0d2f9936e93f.png"
+              alt="Gaming"
+              width="26"
+              height="26"
+              class="d-inline-block align-text-top"
+          /></a>
+          <a href="Freizeit.html" class="btn btn-light ms-3"
+            >Freizeit
             <img
-            src="../images/vol.png"
-            alt="Freizeit"
-            width="21"
-            height="21"
-            class="d-inline-block align-text-top"
-          >
+              src="../images/vol.png"
+              alt="Freizeit"
+              width="21"
+              height="21"
+              class="d-inline-block align-text-top"
+            />
           </a>
-          <a href="Arbeit.html" class="btn btn-light ms-3">Arbeit
+          <a href="Arbeit.html" class="btn btn-light ms-3"
+            >Arbeit
             <img
-            src="../images/Buch.png"
-            alt="Arbeit"
-            width="22"
-            height="22"
-            class="d-inline-block align-text-top"
-          >
+              src="../images/Buch.png"
+              alt="Arbeit"
+              width="22"
+              height="22"
+              class="d-inline-block align-text-top"
+            />
           </a>
         </nav>
         <form class="d-flex" role="search">
@@ -58,17 +67,17 @@
             type="search"
             placeholder="Search"
             aria-label="Search"
-          >
+          />
         </form>
       </div>
     </nav>
-      <nav class="navbar bg-light fixed-bottom d-md-none justify-content-center">
-          <nav class="nav nav-pills nav-fill">
-            <a href="gaming.html" class="btn btn-light ms-3">Shop</a>
-            <a href="Freizeit.html" class="btn btn-light ms-3">Checkout</a>
-            <a href="Arbeit.html" class="btn btn-light ms-3">Arbeit</a>
-          </nav>
+    <nav class="navbar bg-light fixed-bottom d-md-none justify-content-center">
+      <nav class="nav nav-pills nav-fill">
+        <a href="gaming.html" class="btn btn-light ms-3">Shop</a>
+        <a href="Freizeit.html" class="btn btn-light ms-3">Checkout</a>
+        <a href="Arbeit.html" class="btn btn-light ms-3">Arbeit</a>
       </nav>
+    </nav>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
