--- a/Seiten/Html/Homepage.html
+++ b/Seiten/Html/Homepage.html
@@ -76,14 +76,14 @@
                 class="rounded img-fluid img-thumbnail"
               />
               </a>
-              <a class="col-md-3 col-sm-10  ">
+              <div class="col-md-3 col-sm-10  ">
                 <div>
                   <p>Angebot des Tages:</p>
                   <h3>Wasserflasche</h3>
                   <p>Preis: 16 Franken</p>
                   <p><del>Normalpreis: 50 Franken</del></p>
                 </div>
-              </a>
+              </div>
             
             </div>
         </div>
