added a shop page with 3 diffrent things

--- a/Seiten/Html/Shop.html
+++ b/Seiten/Html/Shop.html
@@ -58,38 +58,51 @@
           </nav>
         </div>
       </nav>
-      <div class="container mt-5">
-        <div class="row">
-          <div class="col-md-4">
-            <div class="card">
-              <img src="product1.jpg" class="card-img-top" alt="Product 1">
-              <div class="card-body">
-                <h5 class="card-title">Product 1</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Buy Now</a>
+     
+          <div class="container mt-5">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="card">
+                  <img src="../../img/water.png" class="mx-auto" alt="Waterbottle" style="width: 40%;" style="height: 40%;">
+                  <div class="card-body">
+                    <h5 class="card-text red">17.-</h5>
+                    <h4 class="card-title">water bottle</h4>
+                    <p class="card-text">Its just a water bottle</p>
+                    <div class="d-flex bd-highlight">
+                      <div class="p-2 w-100 bd-highlight"><a href="#" class="btn btn-primary">Buy Now</a></div>
+                      <div class="p-2 flex-shrink-1 bd-highlight"><a href="test.html"><img href="#" src="../../img/shopping_cart.png" class="" alt="Waterbottle" style="width: 15%;" style="height: 15%;"></a></div>
+                    </div>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card">
-              <img src="product2.jpg" class="card-img-top" alt="Product 2">
-              <div class="card-body">
-                <h5 class="card-title">Product 2</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Buy Now</a>
+              <div class="col-md-4">
+                <div class="card">
+                  <img src="../../img/zange.png" class="mx-auto" alt="tongs" style="width: 40%;" style="height: 40%;">
+                  <div class="card-body">
+                    <h5 class="card-text red">56.-</h5>
+                    <h4 class="card-title">tongs</h4>
+                    <p class="card-text">usefull tool</p>
+                    <div class="d-flex bd-highlight">
+                      <div class="p-2 w-100 bd-highlight"><a href="#" class="btn btn-primary">Buy Now</a></div>
+                      <div class="p-2 flex-shrink-1 bd-highlight"><a href="test.html"><img href="#" src="../../img/shopping_cart.png" class="" alt="Waterbottle" style="width: 15%;" style="height: 15%;"></a></div>
+                    </div>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card">
-              <img src="product3.jpg" class="card-img-top" alt="Product 3">
-              <div class="card-body">
-                <h5 class="card-title">Product 3</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Buy Now</a>
+              <div class="col-md-4">
+                <div class="card">
+                  <img src="../../img/boots.png" class="mx-auto" alt="Boots" style="width: 56%;" style="height: 56%;">
+                  <div class="card-body">
+                    <h5 class="card-text red">135.-</h5>
+                    <h4 class="card-title">boots</h4>
+                    <p class="card-text">warm boots</p>
+                    <div class="d-flex bd-highlight">
+                      <div class="p-2 w-100 bd-highlight"><a href="#" class="btn btn-primary">Buy Now</a></div>
+                      <div class="p-2 flex-shrink-1 bd-highlight"><a href="test.html"><img href="#" src="../../img/shopping_cart.png" class="" alt="Waterbottle" style="width: 15%;" style="height: 15%;"></a></div>
+                    </div>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
         </div>
       </div>
     <script
