shop frontend technisch fertig gestellt

--- a/Seiten/Html/Shop.html
+++ b/Seiten/Html/Shop.html
@@ -93,7 +93,7 @@
                 <div class="card">
                   <img src="../../img/boots.png" class="mx-auto" alt="Boots" style="width: 56%;" style="height: 56%;">
                   <div class="card-body">
-                    <h5 class="card-text red">135.-</h5>
+                    <h5 class="card-text red">135.- <small class="card-text red"><del>178.-</del></small></h5>
                     <h4 class="card-title">boots</h4>
                     <p class="card-text">warm boots</p>
                     <div class="d-flex bd-highlight">
