--- a/Seiten/Html/Homepage.html
+++ b/Seiten/Html/Homepage.html
@@ -76,12 +76,18 @@
                 class="rounded img-fluid img-thumbnail"
               />
               </a>
-              <div class="col-md-3 col-sm-10  ">
-                <div>
-                  <p>Angebot des Tages:</p>
-                  <h3>Wasserflasche</h3>
-                  <p>Preis: 16 Franken</p>
-                  <p><del>Normalpreis: 50 Franken</del></p>
+              <div class="col-md-3">
+                <div class="card">
+                  <img src="../../img/boots.png" class="mx-auto" alt="Boots" style="width: 45%;" style="height: 45%;">
+                  <div class="card-body">
+                    <h5 class="card-text red">135.- <small class="card-text red"><del>178.-</del></small></h5>
+                    <h4 class="card-title">boots</h4>
+                    <p class="card-text">warm boots</p>
+                    <div class="d-flex bd-highlight">
+                      <div class="p-2 w-100 bd-highlight"><a href="#" class="btn btn-primary">Buy Now</a></div>
+                      <div class="p-2 flex-shrink-1 bd-highlight"><a href="test.html"><img href="#" src="../../img/shopping_cart.png" class="" alt="Waterbottle" style="width: 15%;" style="height: 15%;"></a></div>
+                    </div>
+                  </div>
                 </div>
               </div>
             
