--- a/Seiten/Html/profil.html
+++ b/Seiten/Html/profil.html
@@ -1,97 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>profile</title>
-  <link href="../01_css/stats_v2.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-    crossorigin="anonymous" />
-  <style>
-    body {
-      background-image: url("../../img/LoginBackgroundImg.jpg");
-      background-size: cover;
-    }
-  </style>
-</head>
-
-<body>
-  <nav class="navbar bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="Homepage.html">
-        <img src="../../img/TOPLOGOUnsichtbar.png" width="210" height="75" class="d-inline-block align-text-top" />
-      </a>
-      <form class="navbar-search" role="search" method="get">
-        <input class="form-control" type="search" placeholder="Search" aria-label="Search" />
-      </form>
-
-      <nav class="nav nav-pills nav-fill">
-        <a class="navbar-brand" href="warenkorb.html">
-          <img src="../../img/shopping_cart.png" alt="Shopping cart" width="30" height="30" class="d-inline-block align-text-top" />
-        </a>
-        <a class="navbar-brand" href="profil.html">
-          <img src="../../img/user.png" alt="User" width="30" height="30" class="d-inline-block align-text-top" />
-        </a>
-      </nav>
-    </div>
-  </nav>
-  <!--Loader Start-->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    .loader {
-      border: 16px solid #f3f3f3;
-      border-radius: 50%;
-      border-top: 16px solid #3498db;
-      width: 120px;
-      height: 120px;
-      -webkit-animation: spin 2s linear infinite;
-      /* Safari */
-      animation: spin 2s linear infinite;
-    }
-
-    /* Safari */
-    @-webkit-keyframes spin {
-      0% {
-        -webkit-transform: rotate(0deg);
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>profile</title>
+    <link href="../01_css/stats_v2.css" rel="stylesheet" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+    <link href="../01_css/Loader.css" rel="stylesheet" />
+    <style>
+      body {
+        background-image: url("../../img/LoginBackgroundImg.jpg");
+        background-size: cover;
       }
-
-      100% {
-        -webkit-transform: rotate(360deg);
-      }
-    }
-
-    @keyframes spin {
-      0% {
-        transform: rotate(0deg);
-      }
-
-      100% {
-        transform: rotate(360deg);
-      }
-    }
-  </style>
+    </style>
   </head>
 
   <body>
+    <nav class="navbar bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="Homepage.html">
+          <img
+            src="../../img/TOPLOGOUnsichtbar.png"
+            width="210"
+            height="75"
+            class="d-inline-block align-text-top"
+          />
+        </a>
+        <form class="navbar-search" role="search" method="get">
+          <input
+            class="form-control"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
+        </form>
 
-    <h2>Checking if you are logged in</h2>
-
-    <div class="loader"></div>
-    <!--Loader END-->
+        <nav class="nav nav-pills nav-fill">
+          <a class="navbar-brand" href="warenkorb.html">
+            <img
+              src="../../img/shopping_cart.png"
+              alt="Shopping cart"
+              width="30"
+              height="30"
+              class="d-inline-block align-text-top"
+            />
+          </a>
+          <a class="navbar-brand" href="profil.html">
+            <img
+              src="../../img/user.png"
+              alt="User"
+              width="30"
+              height="30"
+              class="d-inline-block align-text-top"
+            />
+          </a>
+        </nav>
+      </div>
+    </nav>
+    <!--LoginCheck Start-->
+    <script src="../LoaderLoginRegister/Loader.js"></script>
+    <script>
+      //help end
+      let LoginKey = 1;
+      LoadingCircle();
+    </script>
+    <!--LoginCheck END-->
 
     <!--BootstrapLink Start-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-      crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
     <!--BootstrapLink END-->
-
-    <script>
-      let LoginKey = null;
-      if ((Loginkey = null)) {
-      } else {
-      }
-    </script>
   </body>
-
 </html>
