--- a/Seiten/LoaderLoginRegister/login-test.html
+++ b/Seiten/LoaderLoginRegister/login-test.html
@@ -4,7 +4,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="../../01_css/LoginStyle.css">
-    <link href="../../01_css/stats_v2.css" rel="stylesheet"/>
+    <link href="../01_css/LoginStyle.css" rel="stylesheet"/>
   </head>
   <body>
     <h2>Modal Login Form</h2>
