--- a/Seiten/Html/Homepage.html
+++ b/Seiten/Html/Homepage.html
@@ -14,7 +14,7 @@
     >
   </head>
   <body>
-    <nav class="navbar bg-light">
+    <nav class="navbar bg-light sticky-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="Homepage.html">
             <img
