--- a/Seiten/Html/Homepage.html
+++ b/Seiten/Html/Homepage.html
@@ -83,9 +83,9 @@
                     <h5 class="card-text red">135.- <small class="card-text red"><del>178.-</del></small></h5>
                     <h4 class="card-title">boots</h4>
                     <p class="card-text">warm boots</p>
-                    <div class="d-flex bd-highlight">
-                      <div class="p-2 w-100 bd-highlight"><a href="#" class="btn btn-primary">Buy Now</a></div>
-                      <div class="p-2 flex-shrink-1 bd-highlight"><a href="test.html"><img href="#" src="../../img/shopping_cart.png" class="" alt="Waterbottle" style="width: 15%;" style="height: 15%;"></a></div>
+                    <div class="">
+                      <div class="p-2 w-10 bd-highlight"><a href="#" class="btn btn-primary">Buy Now</a>
+                        <a href="test.html"><img href="#" src="../../img/shopping_cart.png" class="" alt="Waterbottle" style="width: 15%;" style="height: 15%;"></a></div>
                     </div>
                   </div>
                 </div>
