--- a/Seiten/LoaderLoginRegister/login-test.html
+++ b/Seiten/LoaderLoginRegister/login-test.html
@@ -6,14 +6,16 @@
     <link rel="stylesheet" href="../../01_css/LoginStyle.css">
     <link href="../01_css/LoginStyle.css" rel="stylesheet"/>
   </head>
+  <!--start-->
   <body>
     <h2>Modal Login Form</h2>
 
     <button
+      style="text-align: center;"
       onclick="document.getElementById('id01').style.display='block'"
       style="width: auto"
     >
-      Login
+      Register
     </button>
 
     <div id="id01" class="modal">
@@ -22,17 +24,8 @@
         action="/action_page.php"
         method="post"
       >
-        <div class="imgcontainer">
-          <span
-            onclick="document.getElementById('id01').style.display='none'"
-            class="close"
-            title="Close Modal"
-            >&times;</span
-          >
-          <img src="img_avatar2.png" alt="Avatar" class="avatar" />
-        </div>
 
-        <div class="container">
+        <div class="container" >
           <label for="uname"><b>Username</b></label>
           <input
             type="text"
@@ -80,5 +73,6 @@
         }
       };
     </script>
+    <!--end-->
   </body>
 </html>
