--- a/Seiten/Html/profil.html
+++ b/Seiten/Html/profil.html
@@ -66,8 +66,7 @@
     <!--LoginCheck Start-->
     <script src="../LoaderLoginRegister/Loader.js"></script>
     <script>
-      //help end
-      let LoginKey = 1;
+      let LoginKey;
       LoadingCircle();
     </script>
     <!--LoginCheck END-->
