--- a/Seiten/Html/danke.html
+++ b/Seiten/Html/danke.html
@@ -58,10 +58,11 @@
           </nav>
         </div>
       </nav>
-      <div class="d-flex flex-row bd-highlight mb-3">
-        <div class="p-2 bd-highlight">Flex item 1</div>
-        <div class="p-2 bd-highlight">Flex item 2</div>
-        <div class="p-2 bd-highlight">Flex item 3</div>
+      <div style="width: 500px; height: 100px; background-color: green; margin: 200px auto 0 auto; text-align: center; border-radius: 25px;">
+        <h1 style="font-size: 36px;">Thank you for creating a product!</h1>
+      </div>
+      <div style="text-align: center; margin-top: 20px;">
+        <button onclick="location.href='Homepage.html'" style="padding: 10px 20px; border-radius: 5px;">Back to the homepage.</button>
       </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
