--- a/Seiten/Html/warenkorb.html
+++ b/Seiten/Html/warenkorb.html
@@ -83,6 +83,12 @@
         <div class="p-2 bd-highlight"></div>
         <div class="p-2 bd-highlight"><h5 class="red">Total 17.-</h5></div>
       </div>
+      <div class="d-flex  bd-highlight justify-content-evenly">
+        <div class="p-2 bd-highlight"></div>
+        <div class="p-2 bd-highlight"></div>
+        <div class="p-2 bd-highlight"></div>
+        <div class="p-2 bd-highlight"><a href="#" class="btn btn-success">Buy Now</a></div>
+      </div>
 
      
     <script
