--- a/Seiten/Html/Homepage.html
+++ b/Seiten/Html/Homepage.html
@@ -69,10 +69,22 @@
               <img
                 src="../../img/reale_erde.png"
                 alt="User"
-                class="rounded img-fluid img-thumbnail"
+                class="rounded img-fluid"
               />
               </a>
               <div class="col-md-3">
+                <div class="card mb-2">
+                  <img src="../../img/boots.png" class="mx-auto" alt="Boots" style="width: 45%;" style="height: 45%;">
+                  <div class="card-body">
+                    <h5 class="card-text red">135.- <small class="card-text red"><del>178.-</del></small></h5>
+                    <h4 class="card-title">boots</h4>
+                    <p class="card-text">warm boots</p>
+                    <div class="">
+                      <div class="p-2 w-10 bd-highlight"><a href="#" class="btn btn-primary">Buy Now</a>
+                        <a href="test.html"><img href="#" src="../../img/shopping_cart.png" class="" alt="Waterbottle" style="width: 15%;" style="height: 15%;"></a></div>
+                    </div>
+                  </div>
+                </div>
                 <div class="card">
                   <img src="../../img/boots.png" class="mx-auto" alt="Boots" style="width: 45%;" style="height: 45%;">
                   <div class="card-body">
@@ -86,6 +98,7 @@
                   </div>
                 </div>
               </div>
+              
             
             </div>
         </div>
