--- a/Seiten/Html/warenkorb.html
+++ b/Seiten/Html/warenkorb.html
@@ -58,6 +58,14 @@
           </nav>
         </div>
       </nav>
+      <div class="d-flex  bd-highlight justify-content-evenly">
+        <div class="p-2 bd-highlight"><h1>Cart</h1></div>
+        <div class="p-2 bd-highlight"></div>
+        <div class="p-2 bd-highlight"></div>
+        <div class="p-2 bd-highlight"></div>
+        
+      </div>
+      <div class="blue-line"></div>
       
       <div class="d-flex  bd-highlight justify-content-evenly">
         <div class="p-2 bd-highlight"><h4 class="card-title">water bottle</h4><img src="../../img/water.png" alt="Waterbottle" style="width: 10vw;" style="height: 10vw;"></div>
@@ -68,6 +76,7 @@
         </h4></div>
         <div class="p-2 bd-highlight"><h5 class="red">17.-</h5></div>
       </div>
+      <div class="blue-line"></div>
       <div class="d-flex  bd-highlight justify-content-evenly">
         <div class="p-2 bd-highlight"><h4 class="card-title">water bottle</h4><img src="../../img/water.png" alt="Waterbottle" style="width: 10vw;" style="height: 10vw;"></div>
         <div class="p-2 bd-highlight"><h4 class="card-title">
@@ -77,6 +86,7 @@
         </h4></div>
         <div class="p-2 bd-highlight"><h5 class="red">17.-</h5></div>
       </div>
+      <div class="blue-line"></div>
       <div class="d-flex  bd-highlight justify-content-evenly">
         <div class="p-2 bd-highlight"></div>
         <div class="p-2 bd-highlight"></div>
