--- a/Seiten/Html/login_and_signup.html
+++ b/Seiten/Html/login_and_signup.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Login and Singup</title>
+  <title>Login and SingUp</title>
   <link href="../01_css/stats_v2.css" rel="stylesheet" />
   <link href="../01_css/LoginStyle.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
@@ -60,16 +60,16 @@
 
     <!--WhiteBoxWithButtonsEND-->
 
-    <div id="id01" class="modal">
+    <div id="id02" class="modal">
       <form class="modal-content animate" action="/action_page.php" method="post">
         <div class="container">
-          <label for="uname"><b>Username</b></label>
-          <input type="text" placeholder="Enter Username" name="uname" required />
+          <label for="email"><b>E-Mail</b></label>
+          <input type="email" placeholder="Enter your E-Mail" name="emailLog" required id="email" />
 
           <label for="psw"><b>Password</b></label>
-          <input type="password" placeholder="Enter Password" name="psw" required />
+          <input type="password" placeholder="Enter Password" name="pswLog" required id="pwassowrd" />
 
-          <button type="submit">Login</button>
+          <button type="submit" type="button" onclick="">Login</button>
           <label>
             <input type="checkbox" checked="checked" name="remember" />
             Remember me
@@ -77,7 +77,7 @@
         </div>
 
         <div class="container" style="background-color: #f1f1f1">
-          <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">
+          <button type="button" onclick="document.getElementById('id02').style.display='none'" class="cancelbtn">
             Cancel
           </button>
           <span class="psw">Forgot <a href="#">password?</a></span>
@@ -87,16 +87,23 @@
 
     <!--register-->
 
-    <div id="id02" class="modal">
-      <form class="modal-content animate" action="/action_page.php" method="post">
+    <div id="id01" class="modal">
+      <form class="modal-content animate" action="/create_user" method="post">
         <div class="container">
+
           <label for="uname"><b>Username</b></label>
-          <input type="text" placeholder="Enter Username" name="uname" required />
+          <input type="text" placeholder="Enter Username" name="username" required />
+
+          <label for="email"><b>E-Mail</b></label>
+          <input type="text" placeholder="Enter your E-Mail" name="email" required />
 
           <label for="psw"><b>Password</b></label>
-          <input type="password" placeholder="Enter Password" name="psw" required />
+          <input type="password" placeholder="Enter Password" name="password" required />
 
-          <button type="submit">Login</button>
+          <label for="GDate"><b>Geburtsdatum</b></label>
+          <input type="text" placeholder="Enter your Brithdate (DD/MM/YY)" name="geburtsdatum" required />
+
+          <button type="submit">SignUp</button>
           <label>
             <input type="checkbox" checked="checked" name="remember" />
             Remember me
@@ -104,7 +111,7 @@
         </div>
 
         <div class="container" style="background-color: #f1f1f1">
-          <button type="button" onclick="document.getElementById('id02').style.display='none'" class="cancelbtn">
+          <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">
             Cancel
           </button>
           <span class="psw">Forgot <a href="#">password?</a></span>
@@ -126,5 +133,6 @@
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
+    <script></script>
 </body>
 </html>
