--- a/Seiten/Html/login_and_signup.html
+++ b/Seiten/Html/login_and_signup.html
@@ -64,7 +64,7 @@
       <form class="modal-content animate" action="/action_page.php" method="post">
         <div class="container">
           <label for="email"><b>E-Mail</b></label>
-          <input type="email" placeholder="Enter your E-Mail" name="emailLog" required id="email" />
+          <input type="text" placeholder="Enter your E-Mail" name="emailLog" required id="email" />
 
           <label for="psw"><b>Password</b></label>
           <input type="password" placeholder="Enter Password" name="pswLog" required id="password" />
