--- a/Seiten/Html/produktansicht.html
+++ b/Seiten/Html/produktansicht.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  
+
   <nav class="navbar bg-light sticky-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="Homepage.html">
@@ -35,7 +35,7 @@
       </nav>
     </div>
   </nav>
-  
+
   <div id="product-overview"></div>
 
   <script>
@@ -43,72 +43,77 @@
     fetch('http://localhost:3004/get_product')
       .then(response => response.json())
       .then(data => {
-    // Define the sample data
-    /*let data = [
-  {
-    produktID: 1,
-    name: 'Test Product',
-    Image: '../../img/reale_erde.png',
-    price: 12.5,
-    producer: 'God product',
-    description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
-  }
-];*/
+        // Define the sample data
+        /*let data = [
+      {
+        produktID: 1,
+        name: 'Test Product',
+        Image: '../../img/reale_erde.png',
+        price: 12.5,
+        producer: 'God product',
+        description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.'
+      }
+    ];*/
 
-// Get a reference to the element where you want to display the product overview
-let container = document.getElementById('product-overview');
+        // Get a reference to the element where you want to display the product overview
+        let container = document.getElementById('product-overview');
 
-// Loop through the data array and create elements to display each product
-data.forEach(product => {
-  // Create the product container
-  let productDiv = document.createElement('div');
-  productDiv.classList.add('product', 'card', 'col-md-5', 'mx-auto');
+        // Loop through the data array and create elements to display each product
+        data.forEach(product => {
+          // Create the product container
+          let productDiv = document.createElement('div');
+          productDiv.classList.add('product', 'card', 'col-md-5', 'mx-auto');
 
-  // Create the image element
-  let img = document.createElement('img');
-  img.src = product.Image;
-  img.alt = product.name;
-  img.classList.add('card-img-top');
+          // Create the image element
+          let img = document.createElement('img');
 
-  // Create the card body container
-  let cardBody = document.createElement('div');
-  cardBody.classList.add('card-body');
+          // Convert the BLOB data to a base64-encoded string
+          let imageUrl = 'data:image/jpeg;base64,' + btoa(String.fromCharCode.apply(null, product.Image));
 
-  // Create the name element
-  let name = document.createElement('h3');
-  name.classList.add('card-title');
-  name.textContent = product.name;
+          // Set the src attribute of the img element to the image URL
+          img.src = imageUrl;
+          img.alt = product.name;
+          img.classList.add('card-img-top');
 
-  // Create the price element
-  let price = document.createElement('p');
-  price.classList.add('card-text');
-  price.textContent = 'Price: $' + product.price;
+          // Create the card body container
+          let cardBody = document.createElement('div');
+          cardBody.classList.add('card-body');
 
-  // Create the producer element
-  let producer = document.createElement('p');
-  producer.classList.add('card-text');
-  producer.textContent = 'Producer: ' + product.producer;
+          // Create the name element
+          let name = document.createElement('h3');
+          name.classList.add('card-title');
+          name.textContent = product.name;
 
-  // Create the description element
-  let description = document.createElement('p');
-  description.classList.add('card-text');
-  description.textContent = product.description;
+          // Create the price element
+          let price = document.createElement('p');
+          price.classList.add('card-text');
+          price.textContent = 'Price: $' + product.price;
 
-  // Add the name, price, producer, and description elements to the card body container
-  cardBody.appendChild(name);
-  cardBody.appendChild(price);
-  cardBody.appendChild(producer);
-  cardBody.appendChild(description);
+          // Create the producer element
+          let producer = document.createElement('p');
+          producer.classList.add('card-text');
+          producer.textContent = 'Producer: ' + product.producer;
 
-  // Add the image and card body container to the product container
-  productDiv.appendChild(img);
-  productDiv.appendChild(cardBody);
+          // Create the description element
+          let description = document.createElement('p');
+          description.classList.add('card-text');
+          description.textContent = product.description;
 
-  // Add the product container to the page
-  container.appendChild(productDiv);
-});
+          // Add the name, price, producer, and description elements to the card body container
+          cardBody.appendChild(name);
+          cardBody.appendChild(price);
+          cardBody.appendChild(producer);
+          cardBody.appendChild(description);
 
+          // Add the image and card body container to the product container
+          productDiv.appendChild(img);
+          productDiv.appendChild(cardBody);
+
+          // Add the product container to the page
+          container.appendChild(productDiv);
         });
+
+      });
   </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
