--- a/Seiten/Html/login_and_signup.html
+++ b/Seiten/Html/login_and_signup.html
@@ -139,25 +139,33 @@
       </div>
 
       <script>
-        function logvar() {
-          var email = document.getElementById("email").value;
-          var password = document.getElementById("password").value;
-          console.log(password)
-        }
-        async function login(email, password) {
-          const response = await fetch("http://localhost:3004/login", {
-            method: "POST",
-            headers: {
-              "Content-Type": "application/json",
-            },
-            body: JSON.stringify({
-              email: email,
-              password: password,
-            }),
-          });
-          return response.json();
-          console.log(email)
-        }
+function logvar() {
+  var email = document.getElementById('email').value;
+  var password = document.getElementById('password').value;
+  console.log(password);
+}
+
+async function login(email, password) {
+  try {
+    const response = await fetch('http://localhost:3004/login', {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json',
+      },
+      body: JSON.stringify({
+        email: email,
+        password: password,
+      }),
+    });
+    return await response.json();
+  } catch (error) {
+    console.error(error);
+  }
+}
+
+login(email, password).then((response) => {
+  console.log(response);
+});
       </script>
 
       <!--register-->
