--- a/Seiten/Html/login_and_signup.html
+++ b/Seiten/Html/login_and_signup.html
@@ -75,17 +75,15 @@
     <!--Navigation End-->
     <!--WhiteBoxWithButtonsStart-->
     <div class="white-box">
-      <h2 style="text-align: center">Login or SignUp</h2>
-
+      <h2 style="text-align: center; margin-bottom: 10pt;">Login or SignUp</h2>
       <button
         style="text-align: center"
         onclick="document.getElementById('id01').style.display='block'"
-        style="width: auto"
-        style="padding-bottom: 10px"
+        style="width: auto;"
       >
         SignUp
       </button>
-
+      <p></p>
       <button
         style="text-align: center"
         onclick="document.getElementById('id02').style.display='block'"
@@ -93,7 +91,6 @@
       >
         Login
       </button>
-
       <!--WhiteBoxWithButtonsEND-->
 
       <div id="id02" class="modal">
@@ -142,7 +139,7 @@
 async function logvar() {
   var eMail = document.getElementById('email').value;
   var password = document.getElementById('password').value;
-  console.log("The E-Mail typed in was:" + eMail)
+  console.log("The E-Mail typed in was: " + eMail)
   console.log("The Password typed in was: " + password)
   //Works until here
   await login(eMail, password).then((response) => {
@@ -152,6 +149,7 @@ async function logvar() {
 
 async function login(eMail, password) {
   try {
+// Variables working
     const response = await fetch('http://localhost:3004/login', {
       method: 'POST',
       headers: {
@@ -171,6 +169,7 @@ async function login(eMail, password) {
 /*login(email, password).then((response) => {
   console.log(response);
 });*/
+
       </script>
 
       <!--register-->
