--- a/Seiten/Html/login_and_signup.html
+++ b/Seiten/Html/login_and_signup.html
@@ -115,7 +115,7 @@
               id="password"
             />
 
-            <button type="submit" onclick="logvar(), login();">Login</button>
+            <button onclick="logvar()">Login</button>
             <label>
               <input type="checkbox" checked="checked" name="remember" />
               Remember me
@@ -144,9 +144,7 @@ async function logvar() {
   console.log("The Password typed in was: " + password)
   //Works until here
   alert(eMail);
-  await login(eMail, password).then((response) => {
-    console.log(response);
-  });
+  login(eMail, password)
 }
 
 async function login(eMail, password) {
@@ -161,6 +159,10 @@ headers: {
 })
 .then(function (response) {
  data = response["data"];
+ alert(data);
+ if(!(data === "wrong user or password")){
+  localStorage.setItem('key', data);
+ }
 // location.href = response["data"];
  console.log(response);
 })
