--- a/Seiten/Html/AccountView.html
+++ b/Seiten/Html/AccountView.html
@@ -13,8 +13,6 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <!--<script src="../javascripts/ApiTalkForAcc.js"></script>-->
     <style>
       body {
         background-image: url("../../img/LoginBackgroundImg.jpg");
@@ -26,6 +24,27 @@
         color: black;
         width: 80%;
         opacity: 0.9;
+      }
+      .white-box-inf {
+        background-color:gainsboro;
+        color: black;
+        opacity: 0.9;
+        margin-top: 10px;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 5px;
+        -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+        -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        -ms-border-radius: 5px;
+        -o-border-radius: 5px;
+        border-radius: 5px;
+      }
+
+      .white-box-infhover {
+        opacity: 1;
       }
     </style>
   </head>
@@ -77,14 +96,74 @@
     <!--Navigation End-->
     <!--WhiteBoxWithButtonsStart-->
     <div class="white-box">
-        <a href="./Homepage.html"><button style="background-color: red; width: auto; float: right; border-radius: 15%;">X</button></a>
-        <h2 style="text-align: center; margin-bottom: 10px; font-size:xx-large;">Welcome to your Account</h2>
-        <img 
-        style="display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 20%;"
-        src="../../img/DefaultAvatar.jpg">
+      <a href="./Homepage.html"
+        ><button
+          style="
+            background-color: red;
+            width: auto;
+            float: right;
+            border-radius: 15%;
+          "
+        >
+          X
+        </button></a
+      >
+      <h2 style="text-align: center; margin-bottom: 10px; font-size: xx-large">
+        Welcome to your Account
+      </h2>
+      <img
+        style="
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+          width: 10%;
+        "
+        src="../../img/DefaultAvatar.jpg"
+      />
+      <div style="width: 70%; margin-left: 15%;">
+      <div id="AccInfName" class="white-box-inf"></div>
+      <div id="AccInfemail" class="white-box-inf"></div>
+      <div id="AccInfID" class="white-box-inf"></div>
+      </div>
+      <script>
+        showAccount();
+        async function getUser(userToken) {
+          let data;
+          await fetch("http://localhost:3004/get_user/" + userToken)
+            .then((res) => res.json())
+            .then((json) => {
+              data = json;
+              console.log("picked user ID: " + json[0].userID);
+            });
+          return data;
+        }
+
+        async function showAccount() {
+          var userToken = 1;
+          var Data = await getUser(userToken);
+          var DataID = Data[0].userID;
+          const div_Name = document.getElementById("AccInfName");
+          const div_email = document.getElementById("AccInfemail");
+          const div_ID = document.getElementById("AccInfID");
+          div_Name.innerHTML = "<h4 style='text-align: left; margin-left: 5pt;''> Name: " + Data[0].UserName + "</h4>";
+          div_email.innerHTML = "<h4 style='text-align: left; margin-left: 5pt;''> E-Mail: " + Data[0].eMail + "</h4>";
+          div_email.innerHTML = "<h4 style='text-align: left; margin-left: 5pt;''> Your User ID:  " + Data[0].userID + "</h4>";
+        }
+      </script>
+      <a href="./AccountViewChange.html"
+        ><button
+          style="
+            background-color: deepskyblue;
+            width: auto;
+            float: right;
+            border-radius: 15%;
+            margin-right: 25%;
+          "
+        >
+          Change
+        </button></a
+      >
+      <p style="margin-bottom: 25pt"></p>
     </div>
     <!--WhiteBoxWithButtonsEnd-->
     <script
