--- a/Seiten/Html/warenkorb.html
+++ b/Seiten/Html/warenkorb.html
@@ -70,11 +70,8 @@
       <div class="d-flex  bd-highlight justify-content-evenly">
         <div class="p-2 bd-highlight"><h4 class="card-title">water bottle</h4><img src="../../img/water.png" alt="Waterbottle" style="width: 10vw;" style="height: 10vw;"></div>
         <div class="p-2 bd-highlight"><h4 class="card-title">
-          - 500 ml <br />
-          - Glass, Alu <br />
-          - sustainability
         </h4></div>
-        <div class="p-2 bd-highlight"><h5 class="red">17.-</h5></div>
+        <div class="*p-2 bd-highlight"><h5 class="red">17.-</h5></div>
       </div>
       <div class="blue-line"></div>
       <div class="d-flex  bd-highlight justify-content-evenly">
@@ -106,5 +103,27 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
+    <script>
+      const key = localStorage.getItem('key');
+      if(!(key === undefined)){              
+        axios.post('http://localhost:3004/get_shopping_cart',{
+          key : key
+        }, {
+        headers: { 
+        "Content-Type": "application/x-www-form-urlencoded"
+        } 
+        })
+        .then(function (response) {
+        data = response["data"];        
+        do {
+          
+        } while (i < 5);
+
+
+        -
+        })
+
+      }
+    </script>
   </body>
 </html>
