--- a/Seiten/Html/Homepage.html
+++ b/Seiten/Html/Homepage.html
@@ -60,11 +60,11 @@
             </div>
           </div>
           <div class="card">
-            <img src="../../img/boots.png" class="mx-auto" alt="Boots" style="width: 45%;" style="height: 45%;">
+            <img src="../../img/water.png" class="mx-auto" alt="Boots" style="width: 45%;" style="height: 45%;">
             <div class="card-body">
-              <h5 class="card-text red">135.- <small class="card-text red"><del>178.-</del></small></h5>
-              <h4 class="card-title">boots</h4>
-              <p class="card-text">warm boots</p>
+              <h5 class="card-text red">17.- <small class="card-text red"><del>25.-</del></small></h5>
+              <h4 class="card-title">Waterbottle</h4>
+              <p class="card-text">Glass bottle</p>
               <div class="">
                 <div class="p-2 w-10 bd-highlight"><a href="#" class="btn btn-primary">Buy Now</a>
                   <a href="test.html"><img href="#" src="../../img/shopping_cart.png" class="" alt="Waterbottle"
